Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-119236

Unexpected value for QML Camera.error enum

XMLWordPrintable

    • Windows
    • 8fad1fafc (dev), fb9eb3567 (dev), 2a4682bd5 (dev), 7ab87200d (6.6), a07ca9a77 (6.6), 6ee36c173 (6.6), 95101c810 (tqtc/lts-6.5), 87ce3683c (tqtc/lts-6.5), 0716c8c7a (tqtc/lts-6.5)

      On Windows 10, the QML Camera.error enum reports the value 0xC00D3704 (the accompanying errorString is "Hardware MFT failed to start streaming due to lack of hardware resources.") The Camera.error documentation states this value is an enumeration, referencing QCamera::Error However, the returned value doesn't appear in this enumeration.

      To reproduce:

      1. Start an application which uses the camera, such as the Windows Camera app.
      2. Add the following line to the declarative-camera example in declarative-camera.qml, line 71: onErrorOccurred: (error, errorString) => console.log(error, errorString)a
      3. Compile and run the declarative-camera example; it reports the error immediately after starting.

        For Gerrit Dashboard: QTBUG-119236
        # Subject Branch Project Status CR V

            johanseg Jøger Hansegård
            bjones Bryan Jones
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: